had to hide the logo on mobile, as it doesn't display correctly on mobile devices

--- a/public/css/site.styl
+++ b/public/css/site.styl
@@ -369,7 +369,6 @@ section.wines h3
   
 .logo
   filter drop-shadow(2px 2px 5px black)
-  z-index -1
 
 .centerTo
   position absolute
@@ -385,7 +384,6 @@ section.wines h3
 .homeBackground
   filter blur(2px)
   opacity 0.7
-  z-index -2
 
 .openTableDiners
   overflow hidden
